--- a/app/src/main/res/layout/fragment_book_detail.xml
+++ b/app/src/main/res/layout/fragment_book_detail.xml
@@ -25,7 +25,7 @@
 
     <TextView
         android:id="@+id/tv_detail_book_year"
-        android:textSize="12sp"
+        android:textSize="@dimen/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tv_detail_book_title"
