--- a/app/src/main/res/layout/row_book_item.xml
+++ b/app/src/main/res/layout/row_book_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/iv_book"
         android:layout_width="72dp"
         android:layout_height="72dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/margin_s"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,21 +19,22 @@
 
     <TextView
         android:id="@+id/tv_book_name"
-        android:textSize="18sp"
+        android:textSize="@dimen/title"
         android:ellipsize="end"
         android:maxLines="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_s"
         app:layout_constraintStart_toEndOf="@id/iv_book"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:text="Un libro de Stephen dsfsdfsdfsKing" />
 
     <TextView
         android:id="@+id/tv_book_released"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/margin_xs"
         app:layout_constraintStart_toStartOf="@id/tv_book_name"
         app:layout_constraintTop_toBottomOf="@id/tv_book_name"
         tools:text="Del año 1997" />
